--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,73 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+body {
+  background-color: aquamarine;
 }
+
+.App {
+  margin: 20px;
+  padding: 20px;
+}
+.App h1 {
+  text-align: center;
+}
+
+.account-list {
+  float: left;
+  width: 40%;
+  margin: 40px;
+}
+.account-list h2 {
+  text-align: center;
+  margin-left: 30px;
+}
+
+.accounts {
+  border: 2px solid #000;
+  margin: 10px;
+  padding: 10px;
+  width: 100%;
+}
+.accounts button {
+  padding: 3px;
+  margin: 5px;
+}
+
+.add-account {
+  width: 40%;
+  float: left;
+  margin: 60px;
+  margin-top: 150px;
+  padding: 15px;
+  border: 2px solid #000;
+}
+.add-account h2 {
+  text-align: center;
+  margin: 20px;
+  margin-bottom: 40px;
+}
+.add-account form {
+  margin: 0 90px;
+}
+.add-account form button {
+  padding: 5px;
+  width: 80px;
+  margin-left: 7rem;
+  background-color: crimson;
+}
+
+.account-update {
+  border: 2px solid #000;
+  margin: 10px;
+  padding: 10px;
+  width: 100%;
+}
+.account-update button {
+  padding: 3px;
+  margin: 5px;
+}
+
+/*# sourceMappingURL=index.css.map */
